# SoftwareRenderer

./: CMakeLists.txt  README.md  main.cpp
extensions/: color.h  fragment.h  framebuffer.h  line.h  loadOBJFile.h  point.h  shaders.h  triangle.h  uniform.h  vertexArray.h
